[build-system]
requires = [ "setuptools>=41.0.1",]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "purepy", "erotemic", "github",]
mod_name = "ubelt"
repo_name = "ubelt"
rel_mod_parent_dpath = "."
os = ["all"]
min_python = 3.6
author = "Jon Crall"
typed = "partial"
author_email = "erotemic@gmail.com"
description = "A Python utility belt containing simple tools, a stdlib like feel, and extra batteries"
license = "Apache 2"
dev_status = "stable"
classifiers = [
    # List of classifiers available at:
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Typing :: Stubs Only',
]

[tool.xcookie.setuptools]
keywords = ["utility", "python", "hashing", "caching", "stdlib", "path", "pathlib", "dictionary", "download"]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs"
filterwarnings = [
    "default",
    "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
    "ignore:.*Define the __nice__ method for.*:Warning",
    "ignore:.*private pytest class or function.*:Warning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if trace is not None",
    "verbose = .*", 
    "^ *raise",
    "^ *pass *$",
    "if _debug:",
    "if __name__ == .__main__.:",
    ".*if six.PY2:",
]
omit = [
    "ubelt/__main__.py",
    "ubelt/_win32_links.py",
     "*/setup.py",
]
