[build-system]
requires = [ "setuptools>=41.0.1",]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
ignore_errors = true

[tool.xcookie]
tags = [ "purepy", "erotemic", "github",]
mod_name = "ubelt"
repo_name = "ubelt"
rel_mod_parent_dpath = "."
os = ["all"]
min_python = '3.8'
author = "Jon Crall"
typed = "partial"
use_uv = true
author_email = "erotemic@gmail.com"
description = "A Python utility belt containing simple tools, a stdlib like feel, and extra batteries"
#ci_cpython_versions=["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13.0-beta.2"]
license = "Apache 2"
dev_status = "stable"
classifiers = [
    # List of classifiers available at:
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Typing :: Stubs Only',
]

[tool.xcookie.setuptools]
keywords = ["utility", "python", "hashing", "caching", "stdlib", "path", "pathlib", "dictionary", "download"]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=docs --ignore-glob=htmlcov"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs htmlcov"
filterwarnings = [
    "default",
    "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
    "ignore:.*Define the __nice__ method for.*:Warning",
    "ignore:.*private pytest class or function.*:Warning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if trace is not None",
    "verbose = .*", 
    "^ *raise",
    "^ *pass *$",
    "if _debug:",
    "if __name__ == .__main__.:",
    ".*if six.PY2:",
    ".*if typing.TYPE_CHECKING:",
    ".*if TYPE_CHECKING:",
    "@typing.overload",
    "@overload",
]
omit = [
    "ubelt/__main__.py",
    "ubelt/_win32_links.py",
    "ubelt/_win32_jaraco.py",
     "*/setup.py",
]

[tool.codespell]
skip = ['./docs/build', './*.egg-info', './build', './htmlcov']
count = true
quiet-level = 3
ignore-words-list = ['wont', 'cant', 'ANS', 'doesnt', 'arent', 'ans', 'thats', 'datas', 'isnt']

[tool.ty.src]
# tmp
exclude = [
    #'ubelt/util_path.py',
    #'ubelt/util_stream.py'
]
